[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenome-mh-pred"
version = "0.1.0"
description = "Predicting mental health outcomes from smartphone screenome data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pandas-stubs",
]

[project.scripts]
mh-experiment = "screenome_mh_pred.cli.run_experiment:main"
mh-build-table = "screenome_mh_pred.data.modeling_table:main"
mh-build-folds = "screenome_mh_pred.splits.rolling_origin:main"
mh-validate-splits = "screenome_mh_pred.splits.integrity:main"

[tool.hatch.build.targets.wheel]
packages = ["src/screenome_mh_pred"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
